Commit Shedly update Application

--- a/Auth/Entreprise.css
+++ b/Auth/Entreprise.css
@@ -1,4 +1,4 @@
-/* body {
+body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
@@ -66,4 +66,4 @@ form button {
     height: 35vh;
 }
 
-Add any additional styles as needed */
+Add any additional styles as needed
