--- a/Auth/styleGestionUser.css
+++ b/Auth/styleGestionUser.css
@@ -1,4 +1,4 @@
-/* body {
+body {
     background-color: black;
     width: 99%;
     height: 90vh;
@@ -121,4 +121,4 @@ font-weight: 600;
     max-width: 100%;
     display: flex;
     flex-direction: column;
-} */
+}
