--- a/Auth/styleGestionUser.css
+++ b/Auth/styleGestionUser.css
@@ -1,124 +1,146 @@
-/* body {
-    background-color: black;
-    width: 99%;
-    height: 90vh;
-}
+    .container {
+        text-align: center;
+        margin: 20px;
+    }
 
-.container {
-    width: 98% !important;
-    padding: 0 !important;
-    margin-right: auto;
-    margin-left: auto;
-
-  @media screen and (min-width: 992px) and (max-width: 1439px) {
-    max-width: 100% !important;
-    padding: 0 !important;
-    margin: 0 80px !important;
-    width: auto !important;
-  }
-
-  @media screen and (max-width: 991px) {
-    max-width: 959px !important;
-    margin: 0 16px !important;
-    padding: 0 !important;
-    width: auto !important;
-  }
-}
-
-.gradient-cards {
-        display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 32px;
-    padding: 30px;
-    width: 96%;
-  @media screen and (max-width: 991px) {
-    grid-template-columns: 1fr;
-  }
-}
-
-.container-title {
-    text-align: center;
-    padding: 0 !important;
-    margin-bottom: 40px;
-    font-size: 40px;
-    color: #fff;
-    font-weight: 600;
-    line-height: 60px;
-    width: 100%;
-}
-
-.card {
-max-width: 90%;
-    border: 0;
-    width: 100%;
-    margin-inline: auto;
-}
-
-.container-card {
-  position: relative;
-  border: 2px solid transparent;
-  background: linear-gradient(71deg, #080509, #1a171c, #080509);
-  background-clip: padding-box;
-  border-radius: 45px;
-  padding: 40px;
-  img {
-    margin-bottom: 32px;
-  }
-}
-
-.bg-green-box,
-.bg-white-box,
-.bg-yellow-box,
-.bg-blue-box {
-  position: relative;
-}
-
-.bg-green-box::after,
-.bg-white-box::after,
-.bg-yellow-box::after,
-.bg-blue-box::after {
-  position: absolute;
-  top: -1px;
-  bottom: -1px;
-  left: -1px;
-  right: -1px;
-  content: "";
-  z-index: -1;
-  border-radius: 45px;
-}
-
-.bg-green-box::after {
-  background: linear-gradient(71deg, #0d1212, #3da077, #0d1212);
-}
-
-.bg-white-box::after {
-  background: linear-gradient(71deg, #121013, #b0afb0, #121013);
-}
-
-.bg-yellow-box::after {
-  background: linear-gradient(71deg, #110e0e, #afa220, #110e0e);
-}
-
-.bg-blue-box::after {
-  background: linear-gradient(71deg, #0c0a0e, #5f6fad, #0c0a0e);
-}
-
-.card-title {
-  font-weight: 600;
-  color: white;
-  letter-spacing: -0.02em;
-  line-height: 40px;
-  font-style: normal;
-  font-size: 28px;
-  padding-bottom: 8px;
-}
-
-.card-description {
-font-weight: 600;
-    line-height: 32px;
-    color: hsla(0, 0%, 100%, 0.5);
-    font-size: 16px;
-    max-width: 100%;
+    .container-title-user {
+      font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
     display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    }
+
+    .top_barre{
+            display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 10vh;
+    background: #bfcabf;
+    }
+    .gradient-cards {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .card-user {
+    width: 20%;
+    margin: 20px;
+    box-shadow: 0 4px 8px rgb(0 0 0 / 56%);
+    overflow: hidden;
+    border-radius: 8px;
+    transition: transform 0.2s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 35vh;
+    border: 2px solid lightgray;
+}
+
+    .card-user:hover {
+        transform: scale(1.05);
+    }
+
+    .container-card-user {
+        padding: 20px;
+    }
+
+
+
+    .bg-green-box {
+    background-color: #bfcabf;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
     flex-direction: column;
-} */
+    align-items: flex-start;
+}
+
+    .card-title-user {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+    .card-description-user {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 15px;
+    height: 8vh;
+    width: 100%;
+    overflow: hidden;
+}
+
+    form {
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+    input[type="submit"] {
+        background-color: #4CAF50;
+        color: #fff;
+        padding: 8px 16px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    input[type="submit"]:hover {
+        background-color: #45a049;
+    }
+
+
+#searchbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1%;
+    height: 10vh;
+    width: 100%;
+}
+
+label {
+    margin-bottom: 8px;
+}
+
+input[type="text"] {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 300px;
+}
+
+#button-submit {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    position: relative;
+    top: -5%;
+}
+
+#button-submit:hover {
+    background-color: #45a049;
+}
+
+.logout{
+    position: relative;
+    right: 10%;
+}
