--- a/Auth/css.css
+++ b/Auth/css.css
@@ -5,16 +5,16 @@
 
 
 .container-register{
-	background: #2d3e3f;
-	width: 350px;
-	height: 400px;
-	padding-bottom: 20px;
-	position: absolute;
-	top:50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	margin: auto;
-  padding: 70px 50px 20px 50px;
+    background: #2d3e3f;
+    width: 30%;
+    height: auto;
+    padding-bottom: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: auto;
+    padding: 70px 50px 20px 50px;
 }
 
 
