--- a/Auth/css.css
+++ b/Auth/css.css
@@ -5,7 +5,7 @@
 
 
 .container-register{
-    background: #2d3e3f;
+    background: #45494a;
     width: 30%;
     height: auto;
     padding-bottom: 20px;
@@ -25,7 +25,7 @@
 }
 
 .fontLabel{
-  color: white;
+  color: black;
 }
 
 .fr{
