--- a/Auth/css.css
+++ b/Auth/css.css
@@ -5,7 +5,7 @@
 
 
 .container-register{
-    background: #45494a;
+    background: #bababaad;
     width: 30%;
     height: auto;
     padding-bottom: 20px;
@@ -37,11 +37,12 @@
 }
 
 .box{
-	width: 360px;
-	height: 35px;
-	margin-top: 10px;
-	font-family: verdana;
-	font-size: 12px;
+    width: fit-content;
+    height: 35px;
+    margin-top: 10px;
+    font-family: verdana;
+    font-size: 12px;
+    float: right;
 }
 
 .textBox{
