--- a/Auth/css.css
+++ b/Auth/css.css
@@ -5,7 +5,7 @@
 
 
 .container-register{
-    background: #45494a;
+    background: #bababaad;
     width: 30%;
     height: auto;
     padding-bottom: 20px;
