--- a/Auth/gestionEmploiEntreprise.css
+++ b/Auth/gestionEmploiEntreprise.css
@@ -13,7 +13,7 @@ body {
 .container-gestionUser {
     max-width: 100%;
     width: 95%;
-    margin: 20px auto;
+    margin: 1px auto !important;
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
