--- a/Auth/profileutilisateur.css
+++ b/Auth/profileutilisateur.css
@@ -10,16 +10,18 @@ font-family: "Montserrat", sans-serif;
     height: 100vh;
     margin: 0;
 }
-.profile-page{
-        width: 100%;
-    height: 92%;
+.profile-page-user{
+width: 100%;
+    background: #f3f2f2;
+    height: 92.7vh;
     display: flex;
     flex-direction: column;
+    gap: 2px;
     justify-content: center;
     align-items: center;
 }
-.act-emploi{
-        position: absolute;
+.act-emploi-utilisateur{
+position: absolute;
     top: 4rem;
     left: 1rem;
     background: gray;
@@ -104,28 +106,33 @@ position: absolute;
 }
 
 .profile-info {
-    margin-top: 120px;
-    padding: 8% 8% 2% 8%;
-    position: relative;
-    width: 55%;
-    height: 50vh;
+  margin-top: 120px;
+  padding: 8% 8% 2% 8%;
+  position: relative;
+  width: 55%;
+  height: 50vh;
 }
 
 .profile-info h1 {
-  font-size: 3rem;
-  font-weight: 800;
-  margin: 0.7rem;
-  position: absolute;
-  animation-fill-mode: both;
+    font-size: 3rem;
+    font-weight: 800;
+    margin: 0.7rem;
+    position: absolute;
+    left: -6rem;
+    top: -7rem;
 }
 
 h1.first-name {
-    animation: titleEffect 1s cubic-bezier(0, 0.2, 0.4, 1);
-    top: -102px;
-    left: -36px;
+  animation: titleEffect 1s cubic-bezier(0, 0.2, 0.4, 1);
+  top: -102px;
+  left: -36px;
 }
 
-
+h1.second-name {
+  animation: titleEffect 1s cubic-bezier(0, 0.2, 0.4, 1);
+  top: -102px;
+  left: -36px;
+}
 
 .profile-info h2 {
   font-size: 1rem;
@@ -135,44 +142,25 @@ h1.first-name {
   margin-bottom: 5%;
 }
 
-.social-media-icons a,
-.profile-info h2 {
-  color: #f63d47;
-}
-
 .profile-info p {
   line-height: 1.5rem;
 }
 
-.social-media-icons {
-  display: flex;
-}
-
-.social-media-icons a {
-  margin-top: 7%;
-  font-size: 1.2rem;
-  flex: auto;
-  text-align: center;
-}
-
-.camera,
-.social-media-icons a {
-  transition: text-shadow 0.5s ease;
-}
-
-.camera:hover,
-.social-media-icons a:hover {
-  text-shadow: 0px 5px 15px rgba(143, 133, 135, 0.45);
-}
-
-/* .statistics-entreprise {
+.statistics {
+    margin-right: 10px;
+    margin-left: 10px;
     line-height: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     width: fit-content;
     position: relative;
-} */
+    left: 32rem !important;
+}
 .btn-modifier{
     padding: 10px;
     border: none;
+    position: relative;
 }
 
 
