--- a/Auth/entreprise/dashboardEntreprise.css
+++ b/Auth/entreprise/dashboardEntreprise.css
@@ -14,21 +14,23 @@ display: flex;
 flex-direction: column;
 }
 
-.dashboard_container{
+#app{
+width: 100%;
+    background: blue;
+    height: 88vh;
     display: flex;
-    width: 100% !important;
-    height: 80vh;
 }
 
 /* Styles de la sidebar */
 .main-sidebar {
-    flex-grow: 1;
-    background-color: #cac8c8;
-    padding: 20px;
+    position: fixed;
+    left: 0;
+    top: 12%;
+    height: 88%;
     width: 15%;
-    height: 80vh;
-    overflow: hidden;
-    border-right:1px solid ;
+    background-color: #f4f4f4;
+    border-right: 1px solid #ccc;
+    overflow-y: auto;
 }
 
 
@@ -54,12 +56,14 @@ flex-direction: column;
 
 /* Styles de la zone de contenu */
 .content {
-    flex-grow: 1;
+flex-grow: 1;
     background-color: #cac8c891;
     padding: 20px;
     width: 85% !important;
     height: 80vh;
     overflow: hidden;
+    position: absolute;
+    left: 15%;
 }
 
 /* Icônes Material */
